--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
     "clsx": "^2.1.1",
+    "jose": "^6.1.0",
     "lucide-react": "^0.469.0",
     "next": "16.0.0",
     "react": "19.2.0",
