Implement admin media uploads

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,30 @@ REFRESH_TOKEN_TTL_DAY=7
 REFRESH_COOKIE_NAME=__Host_refresh
 LOGIN_RATE_LIMIT_PER_MIN=5
 LOGIN_RATE_LIMIT_BURST=10
+
+# Storage configuration
+STORAGE_DRIVER=supabase
+
+# Supabase Storage
+SUPABASE_URL=https://YOUR_PROJECT.supabase.co
+SUPABASE_SERVICE_ROLE=service_role_key
+SUPABASE_BUCKET=tanyai-public
+# Optional: override public URL if using CDN
+# SUPABASE_PUBLIC_URL=https://cdn.example.com/tanyai-public
+
+# S3-compatible Storage (if STORAGE_DRIVER=s3)
+# S3_REGION=ap-southeast-1
+# S3_BUCKET=tanyai-public
+# S3_ENDPOINT=https://s3.your-provider.com
+# S3_PUBLIC_BASE_URL=https://cdn.example.com
+# S3_FORCE_PATH_STYLE=false
+# AWS_ACCESS_KEY_ID=your_access_key
+# AWS_SECRET_ACCESS_KEY=your_secret
+
+# Upload policy
+UPLOAD_MAX_MB=5
+# Comma separated allowlist
+# UPLOAD_ALLOWED_MIME=image/jpeg,image/png,image/webp,image/svg+xml
+ALLOW_SVG=false
+UPLOAD_RATE_LIMIT_PER_MIN=10
+UPLOAD_RATE_LIMIT_BURST=10
