Finalize DB-driven knowledge chat integration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,12 @@ REFRESH_TOKEN_TTL_DAY=7
 REFRESH_COOKIE_NAME=__Host_refresh
 LOGIN_RATE_LIMIT_PER_MIN=5
 LOGIN_RATE_LIMIT_BURST=10
+KB_CACHE_TTL_SECONDS=60
+KB_RATE_LIMIT_PER_5MIN=30
+KB_RATE_LIMIT_BURST=30
+CHAT_RATE_LIMIT_PER_5MIN=30
+CHAT_RATE_LIMIT_BURST=30
+AI_MODEL=mock-local
 
 # Storage configuration
 STORAGE_DRIVER=supabase
