Add security middleware, logging, and CI pipeline updates

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ POSTGRES_URL=postgres://postgres:postgres@localhost:5432/tanyai_dev?sslmode=disa
 DB_MAX_OPEN_CONNS=10
 DB_MAX_IDLE_CONNS=5
 DB_CONN_MAX_LIFETIME=1h
+FRONTEND_ORIGIN=http://localhost:3000
