--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@ POSTGRES_URL=postgres://postgres:postgres@localhost:5432/tanyai_dev?sslmode=disa
 DB_MAX_OPEN_CONNS=10
 DB_MAX_IDLE_CONNS=5
 DB_CONN_MAX_LIFETIME=1h
+FRONTEND_ORIGIN=http://localhost:3000
 JWT_SECRET=change_me_to_a_very_long_secret_key_123456
 ACCESS_TOKEN_TTL_MIN=15
 REFRESH_TOKEN_TTL_DAY=7
