feat: refresh chat landing UI and add Gemini provider

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ DB_MAX_OPEN_CONNS=10
 DB_MAX_IDLE_CONNS=5
 DB_CONN_MAX_LIFETIME=1h
 FRONTEND_ORIGIN=http://localhost:3000
+AI_PROVIDER=gemini
+GOOGLE_GENAI_API_KEY=your_google_genai_key
+GEMINI_MODEL=gemini-1.5-pro
