--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,7 +16,9 @@ KB_RATE_LIMIT_PER_5MIN=30
 KB_RATE_LIMIT_BURST=30
 CHAT_RATE_LIMIT_PER_5MIN=30
 CHAT_RATE_LIMIT_BURST=30
-AI_MODEL=mock-local
+AI_PROVIDER=gemini
+GOOGLE_GENAI_API_KEY=your_google_genai_key
+GEMINI_MODEL=gemini-1.5-pro
 
 # Storage configuration
 STORAGE_DRIVER=supabase
