--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "jose": "^6.1.0",
     "lucide-react": "^0.469.0",
+    "framer-motion": "^11.11.17",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
