build: update Makefile targets

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,7 +3,7 @@ include .env
 export $(shell sed -n 's/^\([^#=]*\)=.*/\1/p' .env)
 endif
 
-.PHONY: migrate seed test build
+.PHONY: migrate seed test build dev
 
 migrate:
 	@go run ./cmd/migrate
@@ -16,3 +16,6 @@ test:
 
 build:
 	@go build ./...
+
+dev:
+	@./dev.sh
