--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,11 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "jose": "^6.1.0",
     "lucide-react": "^0.469.0",
-    "framer-motion": "^11.11.17",
     "next": "16.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.53.0",
