--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.53.0",
+    "recharts": "^3.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
